--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -28,5 +28,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          platforms: linux/amd64,linux/arm64,linux/386,linux/ppc64le
+          platforms: linux/amd64,linux/arm64,linux/386
           tags: ghcr.io/instantminecraft/client:latest
