--- a/.github/workflows/build-1.19.2.yaml
+++ b/.github/workflows/build-1.19.2.yaml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Build and publish 1.19.2 image
 
 on:
   - push
@@ -24,9 +24,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build latest image with minecraft server version 1.19.3
+      - name: Build image with minecraft server version 1.19.2
         uses: docker/build-push-action@v3
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/instantminecraft/client:latest
+          build-args:
+            serverfile=https://serverjars.com/api/fetchJar/vanilla/vanilla/1.19.2
+            minecraftversion=1.19.2
+          tags: ghcr.io/instantminecraft/client:mc-1.19.2
