--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -4,29 +4,16 @@ on:
   - push
 
 jobs:
-  push_to_registry:
-    name: Push Docker image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+  build-1.19.2:
+    - uses: ./.github/workflows/setup-docker-env.yaml
+    - name: Build Minecraft 1.19.2 server
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build latest image with minecraft server version 1.19.3
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/instantminecraft/client:latest
+    - name: Build image with minecraft server version 1.19.2
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        platforms: linux/amd64,linux/arm64
+        build-args: |
+          serverfile=https://serverjars.com/api/fetchJar/vanilla/vanilla/1.19.2
+          minecraftversion=1.19.2
+        tags: ghcr.io/instantminecraft/client:mc-1.19.2
