testing github actions workflow fix

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -5,15 +5,16 @@ on:
 
 jobs:
   build-1.19.2:
-    - uses: ./.github/workflows/setup-docker-env.yaml
-    - name: Build Minecraft 1.19.2 server
+    uses: ./.github/workflows/setup-docker-env.yaml
+    name: Build Minecraft 1.19.2 server
 
-    - name: Build image with minecraft server version 1.19.2
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        platforms: linux/amd64,linux/arm64
-        build-args: |
-          serverfile=https://serverjars.com/api/fetchJar/vanilla/vanilla/1.19.2
-          minecraftversion=1.19.2
-        tags: ghcr.io/instantminecraft/client:mc-1.19.2
+    steps:
+      - name: Build image with minecraft server version 1.19.2
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            serverfile=https://serverjars.com/api/fetchJar/vanilla/vanilla/1.19.2
+            minecraftversion=1.19.2
+          tags: ghcr.io/instantminecraft/client:mc-1.19.2
