--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -4,10 +4,11 @@ on:
   - push
 
 jobs:
-  build-1.19.2:
+  setup-env:
     uses: ./.github/workflows/setup-docker-env.yaml
+  build-mc-1.19.2:
     name: Build Minecraft 1.19.2 server
-
+    needs: setup-env
     steps:
       - name: Build image with minecraft server version 1.19.2
         uses: docker/build-push-action@v3
