--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -9,6 +9,7 @@ jobs:
 
   build-latest:
     name: Build latest Minecraft Server
+    runs-on: ubuntu-latest
     needs: setup-env
     steps:
       - name: Build image with minecraft server version 1.19.3
@@ -20,6 +21,7 @@ jobs:
 
   build-mc-1.19.2:
     name: Build Minecraft 1.19.2 server
+    runs-on: ubuntu-latest
     needs: setup-env
     steps:
       - name: Build image with minecraft server version 1.19.2
