--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -19,7 +19,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/instantminecraft/client:latest
 
-  build-mc-1.19.2:
+  build-mc-1_19_2:
     name: Build Minecraft 1.19.2 server
     runs-on: ubuntu-latest
     needs: setup-env
